<resources>
    <string name="app_name">MyMTNCloneUI</string>
    <string name="home">Home</string>
    <string name="go_to_mtn_momo">Go to MTN MOMO</string>
    <string name="your_balances">Your Balances</string>
    <string name="staysafe_stayconnected">#staysafe#stayconnected</string>
    <string name="send">Send</string>
    <string name="buy">Buy</string>
    <string name="help">Help</string>
    <string name="what_do_you_need_help_with">What do you need help with ?</string>
    <string name="having_a_problem">Having a problem ?</string>
    <string name="log_a_complaint">Log a complaint</string>
    <string name="feedback">FeedBack</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_or_email_us">Call or Email Us</string>
    <string name="chat_to_us">Chat to us</string>
    <string name="find_a_store_near_you">Find a store near you</string>
    <string name="learn_more">Learn More</string>
    <string name="faqs">FAQs</string>
    <string name="data_calculator">Data Calculator</string>
    <string name="security">Security</string>
    <string name="legal">Legal</string>
    <string name="airtime">Airtime</string>
    <string name="minutes">Minutes</string>
    <string name="data">Data</string>
    <string name="sms">SMS</string>
    <string name="combo">Combo</string>
    <string name="xtratime">Xtratime</string>
    <string name="other">Other</string>
    <string name="stephen_opwonya">Stephen Opwonya</string>
    <string name="profile">Profile</string>
    <string name="mtn_services">MTN Services</string>
    <string name="loyality_points">Loyality Points</string>
    <string name="recommend_mymtn">Recommend myMTN</string>
    <string name="share_on_social_media">Share on Social Media</string>
    <string name="settings">Settings</string>
    <string name="subscriptions">Subscriptions</string>
</resources>
