<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_buy"
        android:checked="false"
        android:enabled="true"
        android:icon="@mipmap/ic_buy"
        android:title="@string/buy"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_send"
        android:checked="false"
        android:enabled="true"
        android:icon="@mipmap/ic_send"
        android:title="@string/send"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_help"
        android:checked="false"
        android:enabled="true"
        android:icon="@mipmap/ic_help"
        android:title="@string/help"
        app:showAsAction="withText" />

</menu>